k8s/cluster_apps/platform/ingress-traefik/templates/traefik_ingress.yaml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: stripprefix
#   namespace: kube-system
# spec:
#   stripPrefix:
#     prefixes:
#       - /argocd
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: test-auth
# spec:
#   basicAuth:
#     secret: authsecret
# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: authsecret
#   namespace: default
# data:
#   users: |2
#     YWRtaW46JGFwcjEkc3V6ZDI0MkskeXlOSHplZmQ4ci8wQmR6SmowdWRyLwoK
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    # - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    - match: Host(`argocd.dev.local`) && PathPrefix(`/dashboard`) ||  Host(`argocd.dev.local`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
